--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity
+                android:name=".Inicio"
+                android:label="@string/title_activity_inicio">
+        </activity>
         <activity android:name=".Principal">
         </activity>
         <activity android:name=".Registro">
