Cambios por Jose Chuchuca

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".Principal"
+                android:label="@string/title_activity_principal"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
                 android:name=".Inicio"
                 android:label="@string/title_activity_inicio">
-        </activity>
-        <activity android:name=".Principal">
         </activity>
         <activity android:name=".Registro">
         </activity>
